[Controls] Fix cut off range slider popover (#128855)
* Fix cut off popover for right most range control

* Reduce control label max-width and restore small control size

* Disable responsive flex groups in range slider control

* Update options list icon

* Updated time slider icon

(cherry picked from commit c6e9b7aefbe77703c971e25bc7f78eb1f3537473)

--- a/src/plugins/controls/public/control_types/range_slider/range_slider.scss
+++ b/src/plugins/controls/public/control_types/range_slider/range_slider.scss
@@ -31,6 +31,7 @@
 
   .rangeSliderAnchor__delimiter {
     background-color: unset;
+    padding: $euiSizeS*1.5 0;
   }
   .rangeSliderAnchor__fieldNumber {
     font-weight: $euiFontWeightBold;
